Implement core functionality for Vintage Story Server Manager
- Added main application logic in `__init__.py` to initialize the server management process.
- Introduced `ConfigManager` for loading and validating server configurations from TOML files.
- Developed `BackupManager` for managing server data backups, including creation, rotation, and listing.
- Implemented `ServiceManager` to handle interactions with system services using systemd.
- Created `UpdateManager` to orchestrate the server update process, including downloading and verifying new versions.
- Added `VersionChecker` for fetching and comparing server versions from the official API.
- Established interfaces for HTTP requests, filesystem operations, archiving, and compression to enhance modularity and testability.
- Integrated command-line interface with argument parsing for various server management commands.
- Enhanced error handling with custom exceptions for better debugging and user feedback.
- Updated `pyproject.toml` to include authors and build system configuration.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,6 +3,7 @@ name = "vs-mgr"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
+authors = [{ name = "Chronophylos", email = "nikolai@chronophylos.com" }]
 requires-python = ">=3.12"
 dependencies = [
     "packaging>=24.2",
@@ -14,3 +15,10 @@ dependencies = [
 
 [dependency-groups]
 dev = ["ruff>=0.11.4"]
+
+[project.scripts]
+vs-mgr = "vs_mgr:main"
+
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
